--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.119.0",
+    "@aws-cdk/assert": "^2.0.0-rc.19",
     "@types/aws-lambda": "^8.10.76",
     "@types/jest": "^26.0.23",
     "@types/node": "^10.17.0",
@@ -54,30 +54,21 @@
     "jsii-pacmak": "^1.33.0",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
-    "projen": "^0.27.32",
+    "projen": "^0.27.35",
     "standard-version": "^9",
     "ts-jest": "^27.0.4",
     "typescript": "4.2.4"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.119.0",
-    "@aws-cdk/aws-lambda": "^1.119.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.119.0",
-    "@aws-cdk/aws-sns": "^1.119.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.119.0",
-    "@aws-cdk/core": "^1.119.0",
-    "constructs": "^3.2.27"
+    "aws-cdk-lib": "^2.0.0-rc.19",
+    "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.119.0",
-    "@aws-cdk/aws-lambda": "^1.119.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.119.0",
-    "@aws-cdk/aws-sns": "^1.119.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.119.0",
-    "@aws-cdk/core": "^1.119.0",
     "@aws-sdk/client-ecr": "^3.27.0",
     "@aws-sdk/client-ses": "^3.27.0",
+    "aws-cdk-lib": "^2.0.0-rc.19",
     "aws-lambda": "^1.0.6",
+    "constructs": "^10.0.5",
     "node-fetch": "^2.6.1"
   },
   "bundledDependencies": [
