--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.0.0-rc.19",
-    "@types/aws-lambda": "^8.10.76",
-    "@types/jest": "^26.0.23",
+    "@types/aws-lambda": "^8.10.83",
+    "@types/jest": "^27.0.1",
     "@types/node": "^10.17.0",
-    "@types/node-fetch": "^2.5.10",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "esbuild": "0.12.0",
-    "eslint": "^7.20.0",
-    "eslint-import-resolver-node": "^0.3.4",
+    "@types/node-fetch": "^2.5.12",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "esbuild": "^0.12.23",
+    "eslint": "^7.32.0",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.2",
     "jest": "^27.0.6",
     "jest-junit": "^12",
-    "jsii": "^1.33.0",
-    "jsii-diff": "^1.33.0",
-    "jsii-docgen": "^3.2.32",
-    "jsii-pacmak": "^1.33.0",
+    "jsii": "^1.34.0",
+    "jsii-diff": "^1.34.0",
+    "jsii-docgen": "^3.3.5",
+    "jsii-pacmak": "^1.34.0",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
     "projen": "^0.27.35",
