--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 !/.gitattributes
 !/.projen/tasks.json
 !/.projen/deps.json
+!/.projen/files.json
+!/.github/workflows/pull-request-lint.yml
 !/.github/workflows/stale.yml
 !/package.json
 !/LICENSE
@@ -35,16 +37,15 @@ junit.xml
 !/.github/workflows/build.yml
 /dist/changelog.md
 /dist/version.txt
+!/.github/workflows/release.yml
 !/.mergify.yml
-!/.github/workflows/upgrade.yml
 !/.github/pull_request_template.md
 !/test/
-/lib
+!/tsconfig.dev.json
 !/src/
+/lib
 /dist/
-!/tsconfig.jest.json
 !/.eslintrc.json
-!/tsconfig.eslint.json
 .jsii
 tsconfig.json
 !/API.md
@@ -52,4 +53,4 @@ cdk.context.json
 cdk.out
 coverage
 doc
-!/.github/workflows/release.yml
+!/.github/workflows/upgrade-master.yml
