--- a/package.json
+++ b/package.json
@@ -6,26 +6,25 @@
     "url": "https://github.com/markusl/cdk-ecr-image-scan-handler.git"
   },
   "scripts": {
-    "clobber": "npx projen clobber",
-    "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
     "build": "npx projen build",
-    "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
     "bump": "npx projen bump",
+    "clobber": "npx projen clobber",
+    "compat": "npx projen compat",
+    "compile": "npx projen compile",
+    "default": "npx projen default",
+    "docgen": "npx projen docgen",
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "pre-compile": "npx projen pre-compile",
+    "release": "npx projen release",
+    "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
-    "publish:github": "npx projen publish:github",
     "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
-    "default": "npx projen default",
     "watch": "npx projen watch",
-    "package": "npx projen package",
-    "eslint": "npx projen eslint",
-    "compat": "npx projen compat",
-    "publish:npm": "npx projen publish:npm",
-    "docgen": "npx projen docgen",
-    "release": "npx projen release",
     "projen": "npx projen"
   },
   "author": {
@@ -34,42 +33,43 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^2.0.0-rc.19",
-    "@types/aws-lambda": "^8.10.83",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^10.17.0",
+    "@aws-cdk/assert": "^2.1.0",
+    "@types/aws-lambda": "^8.10.88",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^14",
     "@types/node-fetch": "^2.5.12",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "esbuild": "^0.12.28",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk-lib": "2.1.0",
+    "constructs": "10.0.5",
+    "esbuild": "0.14.3",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.2.0",
-    "jest-junit": "^12",
-    "jsii": "^1.34.0",
-    "jsii-diff": "^1.34.0",
-    "jsii-docgen": "^3.6.3",
-    "jsii-pacmak": "^1.34.0",
-    "json-schema": "^0.3.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.27.35",
+    "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.4.5",
+    "jest-junit": "^13",
+    "jsii": "^1.49.0",
+    "jsii-diff": "^1.49.0",
+    "jsii-docgen": "^3.8.31",
+    "jsii-pacmak": "^1.49.0",
+    "json-schema": "^0.4.0",
+    "npm-check-updates": "^12",
+    "projen": "^0.42.1",
     "standard-version": "^9",
-    "ts-jest": "^27.0.5",
-    "typescript": "4.4.3"
+    "ts-jest": "^27.1.1",
+    "typescript": "4.5.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.0.0-rc.19",
+    "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-sdk/client-ecr": "^3.31.0",
-    "@aws-sdk/client-ses": "^3.31.0",
-    "aws-cdk-lib": "^2.0.0-rc.19",
-    "aws-lambda": "^1.0.6",
-    "constructs": "^10.0.5",
-    "node-fetch": "^2.6.2"
+    "@aws-sdk/client-ecr": "^3.44.0",
+    "@aws-sdk/client-ses": "^3.43.0",
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.12",
+    "node-fetch": "^2.6.6"
   },
   "bundledDependencies": [
     "@aws-sdk/client-ecr",
@@ -82,6 +82,9 @@
     "ecr",
     "imagescan"
   ],
+  "engines": {
+    "node": ">= 14.17.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
@@ -120,7 +123,7 @@
     "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.dev.json"
       }
     }
   },
