--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "docgen": "npx projen docgen",
+    "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "package": "npx projen package",
+    "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
-    "upgrade-projen": "npx projen upgrade-projen",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
@@ -33,43 +35,40 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^2.1.0",
-    "@types/aws-lambda": "^8.10.88",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^14",
-    "@types/node-fetch": "^2.5.12",
+    "@types/aws-lambda": "^8.10.117",
+    "@types/jest": "^27",
+    "@types/node": "^16",
+    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
-    "constructs": "10.0.5",
-    "esbuild": "0.14.3",
+    "aws-cdk-lib": "2.83.0",
+    "esbuild": "0.18.2",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "jest": "^27.4.5",
-    "jest-junit": "^13",
-    "jsii": "^1.49.0",
-    "jsii-diff": "^1.49.0",
-    "jsii-docgen": "^3.8.31",
-    "jsii-pacmak": "^1.49.0",
-    "json-schema": "^0.4.0",
-    "npm-check-updates": "^12",
-    "projen": "^0.42.1",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^27",
+    "jest-junit": "^15",
+    "jsii": "1.x",
+    "jsii-diff": "^1.83.0",
+    "jsii-docgen": "^8.0.48",
+    "jsii-pacmak": "^1.83.0",
+    "npm-check-updates": "^16",
+    "projen": "^0.71.91",
     "standard-version": "^9",
-    "ts-jest": "^27.1.1",
-    "typescript": "4.5.4"
+    "ts-jest": "^27",
+    "typescript": "~5.1.3"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.83.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-sdk/client-ecr": "^3.44.0",
-    "@aws-sdk/client-ses": "^3.43.0",
+    "@aws-sdk/client-ecr": "^3.350.0",
+    "@aws-sdk/client-ses": "^3.350.0",
     "aws-lambda": "^1.0.7",
-    "constructs": "^10.0.12",
-    "node-fetch": "^2.6.6"
+    "constructs": "^10.2.51",
+    "node-fetch": "2.6.6"
   },
   "bundledDependencies": [
     "@aws-sdk/client-ecr",
@@ -77,21 +76,25 @@
     "aws-lambda",
     "node-fetch"
   ],
+  "resolutions": {
+    "@types/babel__traverse": "7.18.2",
+    "@types/prettier": "2.6.0"
+  },
   "keywords": [
     "aws",
     "ecr",
     "imagescan"
   ],
   "engines": {
-    "node": ">= 14.17.0"
+    "node": ">= 16.20.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -99,6 +102,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
